Fix issues on landing.php

--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,20 @@
   },
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/",
       "dest": "api/index.php"
+    },
+    {
+      "src": "/landing.php",
+      "dest": "api/landing.php"
+    },
+    {
+      "src": "/login.php",
+      "dest": "api/login.php"
+    },
+    {
+      "src": "/dashboard.php",
+      "dest": "api/dashboard.php"
     }
   ]
 }
-
