Deploy all important controllers and files

--- a/vercel.json
+++ b/vercel.json
@@ -6,20 +6,12 @@
   },
   "routes": [
     {
-      "src": "/",
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
       "dest": "api/index.php"
-    },
-    {
-      "src": "/landing.php",
-      "dest": "api/landing.php"
-    },
-    {
-      "src": "/login.php",
-      "dest": "api/login.php"
-    },
-    {
-      "src": "/dashboard.php",
-      "dest": "api/dashboard.php"
     }
   ]
 }
